--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^13.1.8",
-    "eslint": "^6.8.0",
     "express": "^4.17.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.5",
     "typescript-eslint-parser": "^22.0.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0"
   }
 }
